--- a/consoleDesign/app/src/main/AndroidManifest.xml
+++ b/consoleDesign/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.example.consoledesign">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
-
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
@@ -14,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".mappingAct"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
